[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/MenuContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Options/Graphics.gd" type="Script" id=2]

[node name="Graphics" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
margin_left = 115.0
margin_top = 70.0
margin_right = 204.0
margin_bottom = 110.0

[node name="CheckButton" type="CheckButton" parent="MenuContainer/VBoxContainer"]
margin_right = 89.0
margin_bottom = 24.0
text = "Fullscreen"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 89.0
margin_bottom = 40.0
alignment = 1

[node name="BackButton" type="Button" parent="MenuContainer/VBoxContainer/HBoxContainer"]
margin_left = 13.0
margin_right = 42.0
margin_bottom = 12.0
text = "Back"

[node name="ResetButton" type="Button" parent="MenuContainer/VBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 76.0
margin_bottom = 12.0
disabled = true
text = "Reset"
[connection signal="toggled" from="MenuContainer/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
